{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 26,
  "lineage": "c9bfb5c2-f488-75e9-d968-d20558201098",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ntier_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709863898655:internet-gateway/igw-0cfdc09e80ad8d6f9",
            "id": "igw-0cfdc09e80ad8d6f9",
            "owner_id": "709863898655",
            "tags": {
              "Name": "ntier-igw"
            },
            "tags_all": {
              "Name": "ntier-igw"
            },
            "vpc_id": "vpc-04c1e8c3da0ea452b"
          },
          "dependencies": [
            "aws_vpc.ntier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709863898655:route-table/rtb-004dfc46caa38557c",
            "id": "rtb-004dfc46caa38557c",
            "owner_id": "709863898655",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c1e8c3da0ea452b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnets",
            "aws_vpc.ntier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709863898655:route-table/rtb-0b815e0e9bed4eae5",
            "id": "rtb-0b815e0e9bed4eae5",
            "owner_id": "709863898655",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cfdc09e80ad8d6f9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c1e8c3da0ea452b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ntier_igw",
            "aws_subnet.subnets",
            "aws_vpc.ntier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b3e0d1d1953cf9c",
            "route_table_id": "rtb-004dfc46caa38557c",
            "subnet_id": "subnet-0f5d8441817df68f0"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.subnets",
            "aws_vpc.ntier",
            "data.aws_subnets.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092f06e1b781010d0",
            "route_table_id": "rtb-004dfc46caa38557c",
            "subnet_id": "subnet-0af2eb3010baa25cc"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.subnets",
            "aws_vpc.ntier",
            "data.aws_subnets.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d71b66736b78c5b",
            "route_table_id": "rtb-004dfc46caa38557c",
            "subnet_id": "subnet-0a1e79f3f325aa21f"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.subnets",
            "aws_vpc.ntier",
            "data.aws_subnets.private"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042525ae42cbf0860",
            "route_table_id": "rtb-004dfc46caa38557c",
            "subnet_id": "subnet-0e79f194c438eb736"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.subnets",
            "aws_vpc.ntier",
            "data.aws_subnets.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092a673ae28dbafcc",
            "route_table_id": "rtb-0b815e0e9bed4eae5",
            "subnet_id": "subnet-07d53cdd566588b06"
          },
          "dependencies": [
            "aws_internet_gateway.ntier_igw",
            "aws_route_table.public",
            "aws_subnet.subnets",
            "aws_vpc.ntier",
            "data.aws_subnets.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf91a0095930ecba",
            "route_table_id": "rtb-0b815e0e9bed4eae5",
            "subnet_id": "subnet-0e6d8368a6fc509c3"
          },
          "dependencies": [
            "aws_internet_gateway.ntier_igw",
            "aws_route_table.public",
            "aws_subnet.subnets",
            "aws_vpc.ntier",
            "data.aws_subnets.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709863898655:subnet/subnet-0af2eb3010baa25cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af2eb3010baa25cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "709863898655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app1"
            },
            "tags_all": {
              "Name": "app1"
            },
            "vpc_id": "vpc-04c1e8c3da0ea452b"
          },
          "dependencies": [
            "aws_vpc.ntier"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709863898655:subnet/subnet-0a1e79f3f325aa21f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1e79f3f325aa21f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "709863898655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app2"
            },
            "tags_all": {
              "Name": "app2"
            },
            "vpc_id": "vpc-04c1e8c3da0ea452b"
          },
          "dependencies": [
            "aws_vpc.ntier"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709863898655:subnet/subnet-0e79f194c438eb736",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e79f194c438eb736",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "709863898655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db1"
            },
            "tags_all": {
              "Name": "db1"
            },
            "vpc_id": "vpc-04c1e8c3da0ea452b"
          },
          "dependencies": [
            "aws_vpc.ntier"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709863898655:subnet/subnet-0f5d8441817df68f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5d8441817df68f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "709863898655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db2"
            },
            "tags_all": {
              "Name": "db2"
            },
            "vpc_id": "vpc-04c1e8c3da0ea452b"
          },
          "dependencies": [
            "aws_vpc.ntier"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709863898655:subnet/subnet-0e6d8368a6fc509c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6d8368a6fc509c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "709863898655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web1"
            },
            "tags_all": {
              "Name": "web1"
            },
            "vpc_id": "vpc-04c1e8c3da0ea452b"
          },
          "dependencies": [
            "aws_vpc.ntier"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709863898655:subnet/subnet-07d53cdd566588b06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d53cdd566588b06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "709863898655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web2"
            },
            "tags_all": {
              "Name": "web2"
            },
            "vpc_id": "vpc-04c1e8c3da0ea452b"
          },
          "dependencies": [
            "aws_vpc.ntier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ntier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709863898655:vpc/vpc-04c1e8c3da0ea452b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0d7ce600c374f2285",
            "default_route_table_id": "rtb-01ece621456320b2a",
            "default_security_group_id": "sg-04963c06d339d4caf",
            "dhcp_options_id": "dopt-0c6155bd8a0d5916e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04c1e8c3da0ea452b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01ece621456320b2a",
            "owner_id": "709863898655",
            "tags": {
              "Name": "ntier"
            },
            "tags_all": {
              "Name": "ntier"
            }
          }
        }
      ]
    }
  ]
}